Infrastructure/k8s/buyer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  buyer
  template:
    metadata:
      labels:
        app: buyer
    spec:
      containers:
        - name: buyer
          image: buyer
