Infrastructure/k8s/delivery-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: docker.io/thulina/herb-fair-delivery:latest
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-clusterip-srv
spec:
  selector:
    app: delivery-srv
  type: ClusterIP
  ports:
    - name: delivery-srv
      protocol: TCP
      port: 4003
      targetPort: 4003
