Infrastructure/k8s/inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: docker.io/thulina/herb-fair-inventory:latest
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip-srv
spec:
  selector:
    app: inventory-srv
  type: ClusterIP
  ports:
    - name: inventory-srv
      protocol: TCP
      port: 4001
      targetPort: 4001
