Infrastructure/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: docker.io/thulina/herb-fair-order:latest
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-srv
spec:
  selector:
    app: order-srv
  type: ClusterIP
  ports:
    - name: order-srv
      protocol: TCP
      port: 4001
      targetPort: 4001
