Infrastructure/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: docker.io/thulina/herb-fair-payment:latest
---
apiVersion: v1
kind: Service
metadata:
  name: payment-clusterip-srv
spec:
  selector:
    app: payment-srv
  type: ClusterIP
  ports:
    - name: payment-srv
      protocol: TCP
      port: 4000
      targetPort: 4000
