Infrastructure/k8s/review-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: docker.io/thulina/herb-fair-review:latest
---
apiVersion: v1
kind: Service
metadata:
  name: review-clusterip-srv
spec:
  selector:
    app: review-srv
  type: ClusterIP
  ports:
    - name: review-srv
      protocol: TCP
      port: 4006
      targetPort: 4006
