Infrastructure/k8s/seller-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  seller
  template:
    metadata:
      labels:
        app: seller
    spec:
      containers:
        - name: seller
          image: docker.io/thulina/herb-fair-seller:latest
---
apiVersion: v1
kind: Service
metadata:
  name: seller-clusterip-srv
spec:
  selector:
    app: seller-srv
  type: ClusterIP
  ports:
    - name: seller-srv
      protocol: TCP
      port: 4004
      targetPort: 4004
